button font-family added

--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ header{
     display: inline-block;
     font-size: 16px;
     margin: 1em auto;
+    font-family: 'Montserrat', sans-serif;
 }
 .nmd{
     display: flex;
